tests/e2e/function_call_no_function.story
function name key:int
	a = 0

nam (key: 2)
